--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
-url: "https://sylhare.github.io"
+baseurl: "/sp1cy.dev"
+url: "https://sp1cyy.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Type on Strap                                    # site's title
-description: "A website with blog posts and pages"      # used by search engines
+description: "primera web de sp1cy.dev (en desarollo)"      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
-header_feature_image: assets/img/pexels/triangular.jpeg
+header_text: ¿que es la programacion?  # Change Blog header text
+header_feature_image: https://www.freepik.es/vector-premium/desarrollo-software-programacion_4726490.htm
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
