--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 header_text: ¿que es la programacion?  # Change Blog header text
 header_feature_image: https://www.freepik.es/vector-premium/desarrollo-software-programacion_4726490.htm
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+  Powered by <a href="https://www.freepik.es/vector-premium/desarrollo-software-programacion_4726490.htm">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
